--- a/SASS/_mediaQueries.scss
+++ b/SASS/_mediaQueries.scss
@@ -66,18 +66,20 @@
         padding-left: $spacing-lg*2.5;   
         padding-top: $spacing-lg*2.5;  
         padding-bottom: $spacing-lg*2;   
-        font-size: $spacing-lg*2;      
+             
         
             .info__nombre h3{
                 font-size: $f-large*2.7;
             }
             .info__texto 
            
-                p{         
+                p{  
+                         
                 margin: $spacing-lg;                                  
                 padding-left: $spacing-lg;
                 
             }
+    }
 
     .redesSociales__logos{
         display: flex;
@@ -96,25 +98,122 @@
 
    }   
     
-    .main p {
-        font-size: 5em;
-    }
+    
 
     /* Inicio Nosotros*/
-    .main__containerNosotros{
 
-        width: 50%;
+    .main__containerNosotros{
+        width: 90%;
         grid-column-gap: $spacing;
         grid-row-gap: $spacing;
-        padding: $spacing*2.5; 
-        overflow-x: auto;
+        padding: $spacing*2.5;    
+
     }
 
+    .main__galeria{
+        display: flex;
+        justify-content: center;
+        width: $full-width;
+        overflow-x: auto;
+        background-color: $grey;     
+        flex-wrap: wrap;       
+        height: auto;
+        border-radius: $spacing-sm;
+        width: 100%;
+    }
+
+    .informacion{
+        background-color: $blue-text;
+        border-radius: $spacing; 
+        margin: $spacing-lg;
+            h2{
+                color: #000;
+                font-size: $f-title*3;
+            }
+            
+     }
     
 
      /* Fin Inicio Nosotros*/
+
+     /* Inicio Contacto*/
+
+     .main__containerContacto{
+        padding-bottom: $spacing-lg*50;
+    }
+
+    .containerContacto__form{
+        fieldset{
+            overflow-x: auto;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    .formulario__cajaContacto{
+        display: flex;
+        flex-direction: column;
+        color: black;
+        font-size: $f-large*6;
+        padding-left: $spacing-lg*2;
+        input{
+            height: 2em;
+            width: 80%;
+            color: black;            
+        }
         
-}
+    }   
+    
+    .formulario__cajaContacto2{
+        font-size: $f-large*6;
+        padding-left: $spacing-lg*2;
+        color: #000;
+        padding-bottom: $spacing-lg*2;
+            select{
+                color: $black;
+                width: 90%;
+                    option{
+                        color: $black;
+                        font-size: $f-large*4;
+                    }
+            }
+    }
+    
+    
+    .formulario__cajaContacto3{
+        display: flex;
+        flex-direction: column;
+        padding-left: $spacing-lg*2;
+        
+
+        input{        
+        margin-bottom: $spacing-lg*2 ;
+        color: black;
+        font-size: $f-large*6;
+        padding-left: $spacing-lg*2;
+        width: 80%;
+        }
+        p{
+            color: #000;
+            padding-left: $spacing-lg*2;
+
+        }
+    }   
+    
+    .formulario__cajaContacto4{   
+        color: $black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        p{
+            font-size: $f-large*6;
+            padding-left: $spacing-lg*2;
+        }
+        
+        
+    } 
+
+    /* Fin Contacto*/    
 }
 
 @media screen and (min-width: 300px) and (max-width: 575px) {
@@ -200,6 +299,7 @@
                 padding-left: $spacing-lg;
                 
             }
+    }
 
     .redesSociales__logos{
         display: flex;
@@ -219,7 +319,7 @@
 
     /* Inicio Nosotros*/
     .main__containerNosotros{
-        width: 100%;
+        width: 90%;
         grid-column-gap: $spacing;
         grid-row-gap: $spacing;
         padding: $spacing*2.5;    
@@ -229,11 +329,118 @@
     .main__galeria{
         display: flex;
         justify-content: center;
+        width: $full-width;
+        overflow-x: auto;
+        background-color: $grey;     
+        flex-wrap: wrap;       
+        height: auto;
+        border-radius: $spacing-sm;
+        width: 100%;
     }
 
+    .informacion{
+        background-color: $blue-text;
+        border-radius: $spacing; 
+        margin: $spacing-lg;
+            h2{
+                color: #000;
+                font-size: $f-title*1.8;
+            }
+     }
+
      /* Fin Inicio Nosotros*/
+
+     /* Inicio Contacto*/
+
+     .main__containerContacto{
+        padding-bottom: $spacing-lg*50;
+    }
+
+    .containerContacto__form{
+        fieldset{
+            overflow-x: auto;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    .formulario__cajaContacto{
+        display: flex;
+        flex-direction: column;
+        color: black;
+        font-size: $f-large*3;
+        padding-left: $spacing-lg*1.8;
+        input{
+            height: 2em;
+            width: 80%;
+            color: black;            
+        }
+        
+    }   
+    
+    .formulario__cajaContacto2{
+        font-size: $f-large*3;
+        padding-left: $spacing-lg*1.8;
+        color: #000;
+        padding-bottom: $spacing-lg*2;
+            select{
+                color: $black;
+                width: 90%;
+                    option{
+                        color: $black;
+                        font-size: $f-large*2;
+                    }
+            }
+    }
+    
+    
+    .formulario__cajaContacto3{
+        display: flex;
+        flex-direction: column;
+        padding-left: $spacing-lg*2;
+        
+
+        input{        
+        margin-bottom: $spacing-lg*2 ;
+        color: black;
+        font-size: $f-large*3;
+        padding-left: $spacing-lg*2;
+        width: 80%;
+        }
+        p{
+            color: #000;
+            padding-left: $spacing-lg*2;
+
+        }
+    }   
+    
+    .formulario__cajaContacto4{   
+        color: $black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        p{
+            font-size: $f-large*3;
+            padding-left: $spacing-lg*2;
+        }
+        
+        
+    } 
+
+    .dropdown{
+        display: flex;    
+        justify-content: center;
+    } 
+    
+    .containerContacto__formulario{
+        display: flex;
+        flex-direction: row;      
+        
+    }
+
+    /* Fin Contacto*/
 }
-}
+
 @media screen and (min-width: 576px) and (max-width: 991px){
     .tituloPagina__title{
         font-size: $f-large*8;
@@ -296,13 +503,16 @@
             .info__nombre h3{
                 font-size: $f-large*2.7;
             }
-            .info__texto 
+            .info__texto{ 
            
                 p{     
                 margin:$spacing-lg;                                  
                 padding-left: $spacing-lg;
                 
             }
+            }
+    }
+    
 
     .redesSociales__logos{
         display: flex;
@@ -321,11 +531,10 @@
     }  
     /* Inicio Nosotros*/
     .main__containerNosotros{
-        width: 70%;
+        width: 90%;
         grid-column-gap: $spacing;
         grid-row-gap: $spacing;
-        padding: $spacing*2.5; 
-
+        padding: $spacing*2.5;    
 
     }
 
@@ -341,9 +550,111 @@
         width: 100%;
     }
 
+    .informacion{
+        background-color: $blue-text;
+        border-radius: $spacing; 
+        margin: $spacing-lg;
+            h2{
+                color: #000;
+                font-size: $f-title*1.3;
+            }
+     }
+
      /* Fin Inicio Nosotros*/
+
+      /* Fin Inicio Nosotros*/
+
+     /* Inicio Contacto*/
+
+     .main__containerContacto{
+        padding-bottom: $spacing-lg*50;
+    }
+
+    .containerContacto__form{
+        fieldset{
+            overflow-x: auto;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    .formulario__cajaContacto{
+        display: flex;
+        flex-direction: column;
+        color: black;
+        font-size: $f-large*3;
+        padding-left: $spacing-lg*1.8;
+        input{
+            height: 2em;
+            width: 80%;
+            color: black;            
+        }
+        
+    }   
+    
+    .formulario__cajaContacto2{
+        font-size: $f-large*3;
+        padding-left: $spacing-lg*1.8;
+        color: #000;
+        padding-bottom: $spacing-lg*2;
+            select{
+                color: $black;
+                width: 90%;
+                    option{
+                        color: $black;
+                        font-size: $f-large*2;
+                    }
+            }
+    }
+    
+    
+    .formulario__cajaContacto3{
+        display: flex;
+        flex-direction: column;
+        padding-left: $spacing-lg*2;
+        
+
+        input{        
+        margin-bottom: $spacing-lg*2 ;
+        color: black;
+        font-size: $f-large*3;
+        padding-left: $spacing-lg*2;
+        width: 80%;
+        }
+        p{
+            color: #000;
+            padding-left: $spacing-lg*2;
+
+        }
+    }   
+    
+    .formulario__cajaContacto4{   
+        color: $black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        p{
+            font-size: $f-large*3;
+            padding-left: $spacing-lg*2;
+        }
+        
+        
+    } 
+
+    .dropdown{
+        display: flex;    
+        justify-content: center;
+    } 
+    
+    .containerContacto__formulario{
+        display: flex;
+        flex-direction: row;      
+        
+    }
+
+    /* Fin Contacto*/
 }
-}
+
 @media screen and (min-width: 992px) and (max-width: 1199px) {
     .tituloPagina__title{
         font-size: $f-large*8;
@@ -452,7 +763,110 @@
         width: 100%;
     }
 
+    .informacion {
+    background-color: $blue-text;
+    border-radius: $spacing; 
+    margin: $spacing-lg;
+        
+            h2{    
+                color: $black;            
+                font-size: $f-title*.9;
+            }
+     }
+     
     /* Fin Inicio Nosotros*/
+
+     /* Fin Inicio Nosotros*/
+
+     /* Inicio Contacto*/
+
+     .main__containerContacto{
+        padding-bottom: $spacing-lg*50;
+    }
+
+    .containerContacto__form{
+        fieldset{
+            overflow-x: auto;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    .formulario__cajaContacto{
+        display: flex;
+        flex-direction: column;
+        color: black;
+        font-size: $f-large*3;
+        padding-left: $spacing-lg*1.8;
+        input{
+            height: 2em;
+            width: 80%;
+            color: black;            
+        }
+        
+    }   
+    
+    .formulario__cajaContacto2{
+        font-size: $f-large*3;
+        padding-left: $spacing-lg*1.8;
+        color: #000;
+        padding-bottom: $spacing-lg*2;
+            select{
+                color: $black;
+                width: 90%;
+                    option{
+                        color: $black;
+                        font-size: $f-large*2;
+                    }
+            }
+    }
+    
+    
+    .formulario__cajaContacto3{
+        display: flex;
+        flex-direction: column;
+        padding-left: $spacing-lg*2;
+        
+
+        input{        
+        margin-bottom: $spacing-lg*2 ;
+        color: black;
+        font-size: $f-large*3;
+        padding-left: $spacing-lg*2;
+        width: 80%;
+        }
+        p{
+            color: #000;
+            padding-left: $spacing-lg*2;
+
+        }
+    }   
+    
+    .formulario__cajaContacto4{   
+        color: $black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        p{
+            font-size: $f-large*3;
+            padding-left: $spacing-lg*2;
+        }
+        
+        
+    } 
+
+    .dropdown{
+        display: flex;    
+        justify-content: center;
+    } 
+    
+    .containerContacto__formulario{
+        display: flex;
+        flex-direction: row;      
+        
+    }
+
+    /* Fin Contacto*/ 
     
 }
 @media screen and (min-width: 1200px){
@@ -472,6 +886,7 @@
     .col-sm-5{
         width: 80%;
     }
+
     .col-sm-4 {
         padding-top: $spacing-lg;
         width: 100%;
@@ -486,8 +901,7 @@
         color: $black;
         padding-bottom: $spacing*5;
         align-items: center;
-        padding-top: $spacing-lg;
-        
+        padding-top: $spacing-lg;       
 
     }
 
@@ -496,6 +910,7 @@
         height: 100%;
         
     }
+
     .main .jumbotron__button{        
         font-size: $f-large;
         width: auto;
@@ -503,8 +918,12 @@
     }
     
     .main .informacion__jumbotron{
-        h1{font-size: $f-title/2;}
-        p{font-size: $f-large;}
+        h1{
+            font-size: $f-title/2;
+        }
+        p{
+            font-size: $f-large;
+        }
     }
     .main .container__footer{
         height: auto;
@@ -522,13 +941,15 @@
             .info__nombre h3{
                 font-size: $f-large*2.7;
             }
-            .info__texto 
+            .info__texto{
            
                 p{                                       
                 padding-left: $spacing-lg;
                 margin: $spacing-lg;
-                
             }
+        }
+                
+    }
 
     .redesSociales__logos{
         display: flex;
@@ -540,6 +961,7 @@
             }
 
     }  
+
 
     /* Inicio Tecnicas*/
     
@@ -594,8 +1016,97 @@
     .main__galeria{
         display: flex;
         justify-content: center;
+        width: $full-width;
+        overflow-x: auto;
+        background-color: $grey;     
+        flex-wrap: wrap;       
+        height: auto;
+        border-radius: $spacing-sm;
+        width: 100%;
     }
 
-     /* Fin Inicio Nosotros*/
-}
+    .informacion {
+        background-color: $blue-text;
+        border-radius: $spacing; 
+        margin: $spacing-lg;
+                p{
+                    font-size: $f-medium;
+                }
+                h2{    
+                    color: $black;            
+                    font-size: $f-title*.5;
+                }
+         }
+     
+    /* Fin Nosotros*/
+
+    
+     /* Inicio Contacto*/
+
+    .main__containerContacto{
+        padding-bottom: $spacing-lg*12;
+    }
+    .formulario__itemContacto1 {    
+        display: flex;  
+        padding: $spacing-lg;
+        padding-right: 0em;
+             
+    } 
+    .formulario__itemContacto3 {
+        display: flex;
+        flex-direction: row;
+        width: $full-width;
+        height: $spacing-lg;
+        margin: $spacing;
+        align-items: center;
+        color: $black;
+        justify-content: space-around;
+    }
+    
+    .formulario__itemContacto4{
+        margin-top: $spacing-lg;
+        width: auto;
+    }
+    
+    
+    
+    .formulario__cajaContacto{
+        color: black;
+        
+    }
+    
+    .formulario__cajaContacto2{
+        display: flex;
+        color: $black;
+    }
+    
+    .formulario__cajaContacto text{
+        font-size: medium;
+    }
+    .formulario__cajaContacto3{
+        display: flex;
+        flex-direction: row;
+        width: $full-width/2;
+        height: $spacing-lg*2;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    input.formulario__itemContacto1 {
+        width: $spacing-lg*5;
+        height: $f-small;    
+        padding: $f-small;   
+    
+    }
+    
+    .containerContacto2 input, textarea , select , option{   
+        margin-left: $spacing-sm;;
+        margin-right: $spacing-sm;
+        color: $black;
+        width: $spacing*10;
+        
+    } 
+   /* Fin Contacto*/ 
+
+
 }
