--- a/SASS/_mediaQueries.scss
+++ b/SASS/_mediaQueries.scss
@@ -213,7 +213,47 @@
         
     } 
 
-    /* Fin Contacto*/    
+    /* Fin Contacto*/  
+
+    /* Inicio Redes Socailes*/
+
+    .footer__redesSociales{
+        display: flex;
+        flex-direction: row;        
+        align-items: flex-start;
+        justify-content: flex-end;
+          
+        
+        li{
+            color: white;    
+            display: flex;
+            height:$spacing-sm;
+            font-size: $f-small;
+            list-style: none;            
+            padding-bottom: $spacing-lg*5;
+            
+            
+        }
+    }
+        .linksRedes{
+            display: flex;
+            flex-direction: column;
+            width: $spacing-lg*5;
+            
+            li{
+                width: $spacing-lg*3;
+                font-size: $f-large*3;
+                height: $spacing-sm;
+                color: $white;
+                padding-left: $spacing;
+            }
+        }
+            .container__footer a{
+            color: $white;
+            
+        }
+    
+    /* Fin Redes Socailes*/
 }
 
 @media screen and (min-width: 300px) and (max-width: 575px) {
@@ -385,7 +425,7 @@
         padding-bottom: $spacing-lg*2;
             select{
                 color: $black;
-                width: 90%;
+                width: 80%;
                     option{
                         color: $black;
                         font-size: $f-large*2;
@@ -404,12 +444,12 @@
         margin-bottom: $spacing-lg*2 ;
         color: black;
         font-size: $f-large*3;
-        padding-left: $spacing-lg*2;
+        padding-left: $spacing-lg;
         width: 80%;
         }
         p{
             color: #000;
-            padding-left: $spacing-lg*2;
+            padding-left: $spacing-lg;
 
         }
     }   
@@ -420,8 +460,7 @@
         flex-direction: column;
         align-items: center;
         p{
-            font-size: $f-large*3;
-            padding-left: $spacing-lg*2;
+            font-size: $f-large*2.5;            
         }
         
         
@@ -437,8 +476,48 @@
         flex-direction: row;      
         
     }
-
+    
     /* Fin Contacto*/
+
+    /* Inicio Redes Socailes*/
+
+    .footer__redesSociales{
+        display: flex;
+        flex-direction: row;        
+        align-items: flex-start;
+        justify-content: flex-end;
+          
+        
+        li{
+            color: white;    
+            display: flex;
+            height:$spacing-sm;
+            font-size: $f-small;
+            list-style: none;            
+            padding-bottom: $spacing-lg*5;
+            
+            
+        }
+    }
+        .linksRedes{
+            display: flex;
+            flex-direction: column;
+            width: $spacing-lg*5;
+            
+            li{
+                width: $spacing-lg*3;
+                font-size: $f-large*2.5;
+                height: $spacing-sm;
+                color: $white;
+                padding-left: $spacing;
+            }
+        }
+            .container__footer a{
+            color: $white;
+            
+        }
+    
+    /* Fin Redes Socailes*/
 }
 
 @media screen and (min-width: 576px) and (max-width: 991px){
@@ -567,7 +646,7 @@
      /* Inicio Contacto*/
 
      .main__containerContacto{
-        padding-bottom: $spacing-lg*50;
+        padding-bottom: $spacing-lg*30;
     }
 
     .containerContacto__form{
@@ -582,7 +661,7 @@
         display: flex;
         flex-direction: column;
         color: black;
-        font-size: $f-large*3;
+        font-size: $f-large*1.8;
         padding-left: $spacing-lg*1.8;
         input{
             height: 2em;
@@ -593,16 +672,16 @@
     }   
     
     .formulario__cajaContacto2{
-        font-size: $f-large*3;
+        font-size: $f-large*1.8;
         padding-left: $spacing-lg*1.8;
         color: #000;
-        padding-bottom: $spacing-lg*2;
+        padding-bottom: $spacing-lg*1.5;
             select{
                 color: $black;
-                width: 90%;
+                width: 80%;
                     option{
                         color: $black;
-                        font-size: $f-large*2;
+                        font-size: $f-medium;
                     }
             }
     }
@@ -615,15 +694,15 @@
         
 
         input{        
-        margin-bottom: $spacing-lg*2 ;
+        margin-bottom: $spacing-lg ;
         color: black;
-        font-size: $f-large*3;
+        font-size: $f-large*1.8;
         padding-left: $spacing-lg*2;
         width: 80%;
         }
         p{
             color: #000;
-            padding-left: $spacing-lg*2;
+            padding-left: $spacing-lg*1.8;
 
         }
     }   
@@ -634,8 +713,8 @@
         flex-direction: column;
         align-items: center;
         p{
-            font-size: $f-large*3;
-            padding-left: $spacing-lg*2;
+            font-size: $f-large*1.8;
+            padding-left: $spacing-lg;
         }
         
         
@@ -653,6 +732,43 @@
     }
 
     /* Fin Contacto*/
+
+    /* Inicio Redes Socailes*/
+
+    .footer__redesSociales{
+        display: flex;
+        flex-direction: row;        
+        align-items: flex-start;
+        justify-content: flex-end;
+          
+        
+        li{
+            color: white;    
+            display: flex;
+            height:$spacing;
+            font-size: $f-small;
+            list-style: none;            
+            padding-bottom: $spacing-lg*2;
+            
+            
+        }
+    }
+        .linksRedes{
+            display: flex;
+            flex-direction: column;
+            width: $spacing-lg*9;
+            
+            li{               
+                font-size: $f-large*1.8;                
+                color: $white;                
+            }
+        }
+            .container__footer a{
+            color: $white;
+            
+        }
+    
+    /* Fin Redes Socailes*/
 }
 
 @media screen and (min-width: 992px) and (max-width: 1199px) {
@@ -776,12 +892,11 @@
      
     /* Fin Inicio Nosotros*/
 
-     /* Fin Inicio Nosotros*/
-
+    
      /* Inicio Contacto*/
 
      .main__containerContacto{
-        padding-bottom: $spacing-lg*50;
+        padding-bottom: $spacing-lg*30;
     }
 
     .containerContacto__form{
@@ -796,8 +911,8 @@
         display: flex;
         flex-direction: column;
         color: black;
-        font-size: $f-large*3;
-        padding-left: $spacing-lg*1.8;
+        font-size: $f-large*1.5;
+        padding-left: $spacing-lg*1.5;
         input{
             height: 2em;
             width: 80%;
@@ -807,16 +922,16 @@
     }   
     
     .formulario__cajaContacto2{
-        font-size: $f-large*3;
-        padding-left: $spacing-lg*1.8;
+        font-size: $f-large*1.5;
+        padding-left: $spacing-lg*1.5;
         color: #000;
-        padding-bottom: $spacing-lg*2;
+        padding-bottom: $spacing-lg;
             select{
                 color: $black;
-                width: 90%;
+                width: 80%;
                     option{
                         color: $black;
-                        font-size: $f-large*2;
+                        font-size: $f-large;
                     }
             }
     }
@@ -825,19 +940,19 @@
     .formulario__cajaContacto3{
         display: flex;
         flex-direction: column;
-        padding-left: $spacing-lg*2;
+        padding-left: $spacing-lg;
         
 
         input{        
-        margin-bottom: $spacing-lg*2 ;
+        margin-bottom: $spacing-lg*1.5 ;
         color: black;
-        font-size: $f-large*3;
-        padding-left: $spacing-lg*2;
-        width: 80%;
+        font-size: $f-large*1.5;
+        padding-left: $spacing-lg;
+        width: 90%;
         }
         p{
             color: #000;
-            padding-left: $spacing-lg*2;
+            padding-left: $spacing-lg;
 
         }
     }   
@@ -848,8 +963,8 @@
         flex-direction: column;
         align-items: center;
         p{
-            font-size: $f-large*3;
-            padding-left: $spacing-lg*2;
+            font-size: $f-large*1.5;
+            padding-left: $spacing-lg*1.5;
         }
         
         
@@ -867,6 +982,43 @@
     }
 
     /* Fin Contacto*/ 
+
+    /* Inicio Redes Socailes*/
+
+    .footer__redesSociales{
+        display: flex;
+        flex-direction: row;        
+        align-items: flex-start;
+        justify-content: flex-end;
+          
+        
+        li{
+            color: white;    
+            display: flex;
+            height:$spacing-lg;
+            font-size: $f-medium;
+            list-style: none;            
+            padding-bottom: $spacing-lg;
+            
+            
+        }
+    }
+        .linksRedes{
+            display: flex;
+            flex-direction: column;
+            width: $spacing-lg;
+            
+            li{               
+                font-size: $f-large*1.5;                
+                color: $white;                
+            }
+        }
+            .container__footer a{
+            color: $white;
+            
+        }
+    
+    /* Fin Redes Socailes*/
     
 }
 @media screen and (min-width: 1200px){
@@ -1043,70 +1195,127 @@
     
      /* Inicio Contacto*/
 
-    .main__containerContacto{
-        padding-bottom: $spacing-lg*12;
+     .main__containerContacto{
+        padding-bottom: $spacing-lg*20;
     }
-    .formulario__itemContacto1 {    
-        display: flex;  
-        padding: $spacing-lg;
-        padding-right: 0em;
-             
-    } 
-    .formulario__itemContacto3 {
-        display: flex;
-        flex-direction: row;
-        width: $full-width;
-        height: $spacing-lg;
-        margin: $spacing;
-        align-items: center;
-        color: $black;
-        justify-content: space-around;
+
+    .containerContacto__form{
+        fieldset{
+            overflow-x: auto;
+            display: flex;
+            flex-direction: column;
+        }
     }
-    
-    .formulario__itemContacto4{
-        margin-top: $spacing-lg;
-        width: auto;
-    }
-    
-    
-    
+
     .formulario__cajaContacto{
+        display: flex;
+        flex-direction: column;
         color: black;
+        font-size: $f-medium;
+        padding-left: $spacing-lg;
+        input{
+            height: 2em;
+            width: 70%;
+            color: black;            
+        }
         
-    }
+    }   
     
     .formulario__cajaContacto2{
-        display: flex;
-        color: $black;
+        font-size: $f-medium;
+        padding-left: $spacing-lg;
+        color: #000;
+        padding-bottom: $spacing-sm;
+            select{
+                color: $black;
+                width: 70%;
+                    option{
+                        color: $black;
+                        font-size: $f-small;
+                    }
+            }
     }
     
-    .formulario__cajaContacto text{
-        font-size: medium;
-    }
+    
     .formulario__cajaContacto3{
         display: flex;
-        flex-direction: row;
-        width: $full-width/2;
-        height: $spacing-lg*2;
-        justify-content: space-between;
-        align-items: center;
-    }
+        flex-direction: column;
+        padding-left: $spacing-lg;
+            input{        
+        margin-bottom: $spacing-sm;
+        color: black;
+        font-size: $f-medium;        
+        width: 70%;
+        }
+        p{
+            color: #000;
+           
+
+        }
+    }   
     
-    input.formulario__itemContacto1 {
-        width: $spacing-lg*5;
-        height: $f-small;    
-        padding: $f-small;   
-    
-    }
-    
-    .containerContacto2 input, textarea , select , option{   
-        margin-left: $spacing-sm;;
-        margin-right: $spacing-sm;
+    .formulario__cajaContacto4{   
         color: $black;
-        width: $spacing*10;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        p{
+            font-size: $f-medium;
+            padding-left: $spacing-sm;
+        }
+        
         
     } 
-   /* Fin Contacto*/ 
+
+    .dropdown{
+        display: flex;    
+        justify-content: center;
+    } 
+    
+    .containerContacto__formulario{
+        display: flex;
+        flex-direction: row;      
+        
+    }
+
+    /* Fin Contacto*/ 
+
+    /* Inicio Redes Socailes*/
+
+    .footer__redesSociales{
+        display: flex;
+        flex-direction: row;        
+        align-items: flex-start;
+        justify-content: flex-end;
+        padding-left: $spacing-lg;
+          
+        
+        li{
+            color: white;    
+            display: flex;
+            height:$spacing;
+            font-size: $f-small;
+            list-style: none;           
+           
+                        
+        }
+    }
+        .linksRedes{
+            display: flex;
+            flex-direction: column;
+            width: $spacing-lg;
+            
+            li{               
+                font-size: $f-small;                
+                color: $white;                
+            }
+        }
+            .container__footer a{
+            color: $white;
+            
+        }
+    
+    /* Fin Redes Socailes*/
 
 
 }
